--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
     "description": "fuse app",
     "main": "server.js",
     "scripts": {
-      "test": "jest",
-      "start": "node server.js"
+        "test": "jest",
+        "start": "node server.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.17.3"
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.17.3",
+        "jsonwebtoken": "^9.0.0"
     },
     "devDependencies": {
-      "jest": "^27.5.1"
+        "jest": "^27.5.1"
     }
-  }
+}
