--- a/package.json
+++ b/package.json
@@ -4,27 +4,16 @@
     "description": "fuse app",
     "main": "server.js",
     "scripts": {
-        "test": "jest",
-        "start": "node server.js",
-        "lint": "eslint \"**/*.js\" --ignore-pattern node_modules/"
+      "test": "jest",
+      "start": "node server.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "bcrypt": "^5.1.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.17.3",
-        "jsonwebtoken": "^9.0.0",
-        "nodemon": "^2.0.22"
+      "cors": "^2.8.5",
+      "express": "^4.17.3"
     },
     "devDependencies": {
-        "eslint": "^8.43.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-prettier": "^4.2.1",
-        "jest": "^27.5.1",
-        "prettier": "^2.8.8"
+      "jest": "^27.5.1"
     }
-}
+  }
