--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "main": "server.js",
     "scripts": {
         "test": "jest",
-        "start": "node server.js",
-        "lint": "eslint \"**/*.js\" --ignore-pattern node_modules/"
+        "start": "node src/index.js",
+        "dev": "node src/index.js",
+        "style:lint": "eslint \"**/*.js\" --ignore-pattern node_modules/",
+        "prepare": "husky install"
     },
     "author": "",
     "license": "ISC",
@@ -15,8 +17,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.17.3",
-        "jsonwebtoken": "^9.0.0",
-        "nodemon": "^2.0.22"
+        "jsonwebtoken": "^9.0.0"
     },
     "devDependencies": {
         "eslint": "^8.43.0",
@@ -25,6 +26,9 @@
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^27.5.1",
-        "prettier": "^2.8.8"
+        "prettier": "^2.8.8",
+        "husky": "^8.0.0",
+        "lint-staged": "^13.2.2",
+        "nodemon": "^2.0.22"
     }
 }
