--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "express": "^4.17.3",
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.3.1"
+        "mongoose": "^7.3.1",
+        "validator": "^13.9.0"
     },
     "devDependencies": {
         "eslint": "^8.43.0",
