--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "jest",
         "start": "node src/index.js",
-        "dev": "node src/index.js",
+        "dev": "nodemon src/index.js",
         "style:lint": "eslint \"**/*.js\" --ignore-pattern node_modules/",
         "prepare": "husky install"
     },
@@ -17,7 +17,10 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.17.3",
-        "jsonwebtoken": "^9.0.0"
+        "helmet": "^7.0.0",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.3.1",
+        "validator": "^13.9.0"
     },
     "devDependencies": {
         "eslint": "^8.43.0",
@@ -25,10 +28,10 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^4.2.1",
-        "jest": "^27.5.1",
-        "prettier": "^2.8.8",
         "husky": "^8.0.0",
+        "jest": "^27.5.1",
         "lint-staged": "^13.2.2",
-        "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.8"
     }
 }
