--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.3.1",
+        "socket.io": "^4.7.1",
         "validator": "^13.9.0"
     },
     "devDependencies": {
